--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
         <div class="container">
             <h2 class="lead-head">Trainees experience</h2>
             <div class="testimonial bg-primary">
-                <img src="../image/New_Image.jpeg" alt="div_image_3">
+                <img src="image/New_Image.jpeg" alt="div_image_3">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa debitis voluptate earum odio soluta doloribus culpa, vel officia atque, dicta sunt cumque accusamus qui quidem quod consequatur praesentium sapiente saepe?</p>
             </div>
             <div class="testimonial bg-primary">
-                <img src="../image/Section_Image_1.jpeg" alt="div_image_2">
+                <img src="image/Section_Image_1.jpeg" alt="div_image_2">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam possimus odio fugiat, doloremque vero expedita eos alias? Cupiditate, maiores harum optio quis, suscipit porro, expedita doloremque eos excepturi voluptas nihil!</p>
             </div>
         </div>
